package org.printscript.lexer.rules

import org.printscript.common.Result
import org.printscript.lexer.LexicalError
import org.printscript.lexer.TokenMatch
import org.printscript.token.TokenType

object NumberRule : TokenRule {
    override fun match(
        line: String,
        from: Int,
        lineNumber: Int,
    ): Result<TokenMatch, LexicalError>? {
        if (!line[from].isDigit()) return null

        var i = from
        while (i < line.length && line[i].isDigit()) i++

        if (i < line.length && line[i] == '.') {
            val afterDot = i + 1
            if (afterDot == line.length || !line[afterDot].isDigit()) {
                return errorOf("Numero invalido '${line.substring(from, afterDot)}'", lineNumber, from, afterDot - from)
            }
            i = afterDot
            while (i < line.length && line[i].isDigit()) i++
        }

        return matchOf(TokenType.NUMBER_LITERAL, line.substring(from, i), lineNumber, from)
    }
}
